Plane track corners can't be edited independently #74881

Closed
opened 2020-03-18 14:46:19 +01:00 by user1 · 13 comments

System Information
Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 8a5a306a83
Worked: before that commit
Short description of error
Tracking footage via plane track usually provides you with a rectangle, which corners you then have to align with those of the billboard in the footage individually, one by one. But this functionality is gone. One can only select, move or scale the whole thing, not the corners. LMB moves the rectangle, RMB opens the context menu.
track-point-bug.png

Exact steps for others to reproduce the error
Open the following file and try to move a corner of the plane track.
track-point-bug.blend

**System Information** Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 8a5a306a83 Worked: before that commit **Short description of error** Tracking footage via plane track usually provides you with a rectangle, which corners you then have to align with those of the billboard in the footage individually, one by one. But this functionality is gone. One can only select, move or scale the whole thing, not the corners. LMB moves the rectangle, RMB opens the context menu. ![track-point-bug.png](https://archive.blender.org/developer/F8413924/track-point-bug.png) **Exact steps for others to reproduce the error** Open the following file and try to move a corner of the plane track. [track-point-bug.blend](https://archive.blender.org/developer/F8413922/track-point-bug.blend)
Author

Added subscriber: @user1

Added subscriber: @user1
Author

In Right-click-select mode it works as expected. In Left-click-select the context menu gets in the way.

In Right-click-select mode it works as expected. In Left-click-select the context menu gets in the way.
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm. I tested 2.82a and it works as expected.

I can confirm. I tested 2.82a and it works as expected.
Member

Triaging notes: Worked as of c05d83bc76. I have a make lite build from March 2nd where it was still working as well.

Triaging notes: Worked as of c05d83bc76. I have a make lite build from March 2nd where it was still working as well.
Member

When it was working:

graph_id_tag_update: id=MC20200318_130205.mp4 flags=COPY_ON_WRITE source=USER_EDIT
[SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE()
[SCScene :: View Layer]: Accumulated recalc bits for MC20200318_130205.mp4: 8192
[SCScene :: View Layer]: deg_evaluate_copy_on_write on MC20200318_130205.mp4 (000001E3B6734B88)
[SCScene :: View Layer]: BKE_movieclip_eval_update on MC20200318_130205.mp4 (000001E3B6734B88)```
Not working:
```graph_id_tag_update: id=MC20200318_130205.mp4 flags=LEGACY_0 source=USER_EDIT
graph_id_tag_update: id=MC20200318_130205.mp4 flags=LEGACY_0 source=USER_EDIT
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EVAL()
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_ENTRY()
[SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EXIT()
[SCScene :: View Layer]: Operation is entry point for update: MOVIECLIP_SELECT_UPDATE()
[SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE()
[SCScene :: View Layer]: Operation is entry point for update: MOVIECLIP_EVAL()
[SCScene :: View Layer]: Accumulated recalc bits for MC20200318_130205.mp4: 4282380163
[SCScene :: View Layer]: deg_evaluate_copy_on_write on MC20200318_130205.mp4 (000002180F805308)
[SCScene :: View Layer]: BKE_movieclip_eval_selection_update on MC20200318_130205.mp4 (000002180F805308)
[SCScene :: View Layer]: BKE_movieclip_eval_update on MC20200318_130205.mp4 (000002180F805308)```

BKE_movieclip_eval_selection_update is in 3 files.  BKE_movieclip.h was last changed March 9: 6965bcc0c90d
movieclip.c has 5 commits between Mar 4 and Mar 9 as part of the ID refactor.
When it was working: ```graph_id_tag_update: id=MC20200318_130205.mp4 flags=COPY_ON_WRITE source=USER_EDIT graph_id_tag_update: id=MC20200318_130205.mp4 flags=COPY_ON_WRITE source=USER_EDIT [SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE() [SCScene :: View Layer]: Accumulated recalc bits for MC20200318_130205.mp4: 8192 [SCScene :: View Layer]: deg_evaluate_copy_on_write on MC20200318_130205.mp4 (000001E3B6734B88) [SCScene :: View Layer]: BKE_movieclip_eval_update on MC20200318_130205.mp4 (000001E3B6734B88)``` Not working: ```graph_id_tag_update: id=MC20200318_130205.mp4 flags=LEGACY_0 source=USER_EDIT graph_id_tag_update: id=MC20200318_130205.mp4 flags=LEGACY_0 source=USER_EDIT [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EVAL() [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_ENTRY() [SCScene :: View Layer]: Operation is entry point for update: PARAMETERS_EXIT() [SCScene :: View Layer]: Operation is entry point for update: MOVIECLIP_SELECT_UPDATE() [SCScene :: View Layer]: Operation is entry point for update: COPY_ON_WRITE() [SCScene :: View Layer]: Operation is entry point for update: MOVIECLIP_EVAL() [SCScene :: View Layer]: Accumulated recalc bits for MC20200318_130205.mp4: 4282380163 [SCScene :: View Layer]: deg_evaluate_copy_on_write on MC20200318_130205.mp4 (000002180F805308) [SCScene :: View Layer]: BKE_movieclip_eval_selection_update on MC20200318_130205.mp4 (000002180F805308) [SCScene :: View Layer]: BKE_movieclip_eval_update on MC20200318_130205.mp4 (000002180F805308)``` BKE_movieclip_eval_selection_update is in 3 files. BKE_movieclip.h was last changed March 9: 6965bcc0c90d movieclip.c has 5 commits between Mar 4 and Mar 9 as part of the ID refactor.
Member

git_bisect_log.txt

Bisect says ef5c6361a5 but that doesn't seem right. I had to skip a commit that wouldn't build.

[git_bisect_log.txt](https://archive.blender.org/developer/F8417167/git_bisect_log.txt) Bisect says ef5c6361a57a but that doesn't seem right. I had to skip a commit that wouldn't build.
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

@ideasman42 , I can confirm that commenting out the win->eventstate->check_drag = 0; that was added in 8a5a306a83 restores the ability to edit the individual plane tracker corners when using left click select.

@ideasman42 , I can confirm that commenting out the `win->eventstate->check_drag = 0;` that was added in 8a5a306a8313 restores the ability to edit the individual plane tracker corners when using left click select.
Member

Upgrading to High as it is a recent regression caused by a recent commit.

Putting a breakpoint on win->eventstate->check_drag = 0;

Left Select Right Select
triggers breakpoint on click triggers breakpoint on release
check_drag 1\x1 check_drag 0\0
prev val 2 prev val 1
val 1 val 2

So I take it that it is changing check_drag from 1 to 0, which causes the Click Drag (clip.slide_plane_marker) to become a Tweak (transform.translate)

Upgrading to High as it is a recent regression caused by a recent commit. Putting a breakpoint on `win->eventstate->check_drag = 0;` | Left Select | Right Select | | ------------- | ------------- | |triggers breakpoint on click| triggers breakpoint on release| | check_drag 1`\x1` | check_drag 0`\0` | | prev val 2 | prev val 1 | | val 1 | val 2 | So I take it that it is changing `check_drag` from 1 to 0, which causes the `Click Drag` `(clip.slide_plane_marker)` to become a `Tweak` `(transform.translate)`

This issue was referenced by 44b9f6a888

This issue was referenced by 44b9f6a8885bed381e0b86bec378008490a58511

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-04-15 07:25:15 +02:00
Thomas Dinges added this to the 2.83 LTS milestone 2023-02-08 16:38:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74881
No description provided.