Fix T74881: Plane-track corner drag fails with LMB select

Fix from 8a5a306a8313 caused tweaking to fail in the clip editor,
as it wasn't using same convention of other selection operators that
returned the pass-through flag to allow tweaking too.